frontend/src/styles/hot-wa-portal.css
.gradient-button::part(base) {
  background: linear-gradient(
    217deg,
    var(--wa-color-indigo-50),
    var(--wa-color-purple-50),
    var(--wa-color-red-50)
  );
  border: solid 1px var(--wa-color-purple-50);
  transition: transform 100ms, box-shadow 100ms;
}

.gradient-button::part(base):hover {
  box-shadow: var(--wa-shadow-m);
  transform: translateY(-3px);
}

.gradient-button::part(base):active {
  box-shadow: inset var(--wa-shadow-s);
  transform: translateY(0);
}

.gradient-button::part(label) {
  color: white;
  text-shadow: rgb(0 0 0 / 0.3) 0 -1px;
}

/* ADDED FOR PORTAL */
/* Remove shadows from plain buttons */
wa-button[appearance="plain"]::part(base) {
  box-shadow: none;
}

wa-button[appearance="plain"]::part(base):hover {
  box-shadow: none;
  transform: none;
}

wa-button[appearance="plain"]::part(base):active {
  box-shadow: none;
  transform: none;
}

wa-card::part(header) {
  border: none;
}

wa-card::part(footer) {
  border: none;
}

wa-card::part(base) {
  border: none;
  outline: none;
  overflow: hidden;
}

/* Carousel pagination positioning */
.hero-carousel {
  --wa-carousel-pagination-top: var(--wa-spacing-lg);
  --wa-carousel-pagination-bottom: auto;
  --wa-carousel-pagination-left: auto;
  --wa-carousel-pagination-right: var(--wa-spacing-lg);
  --wa-form-control-activated-color: #d73f3f;
  --aspect-ratio: auto;
}

@media (min-width: 768px) {
  .hero-carousel {
    --aspect-ratio: auto;
  }
}
.hero-carousel::part(base) {
  display: flex;
}
.hero-carousel::part(pagination) {
  position: absolute;
  bottom: 165px;
  left: 50%;
  transform: translateX(-50%);
}

@media (min-width: 768px) {
  .hero-carousel::part(pagination) {
    left: auto;
    right: 3rem;
    bottom: 3rem;
    transform: none;
  }
}

